@@ -5,6 +5,10 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Preliminary support for ENUMERATED type. This is largely copied from the
+     INTEGER code.
+     [Steve Henson]
+
   *) Add new function, EVP_MD_CTX_copy() to replace frequent use of memcpy.
      [Eric A. Young, (from changes to C2Net SSLeay, integrated by Mark Cox)]
 
